fix(.card-title): Avoid line breaks when the title is too long.

--- a/app/assets/stylesheets/procedure_list.scss
+++ b/app/assets/stylesheets/procedure_list.scss
@@ -1,14 +1,25 @@
 .procedure__item {
+  position: relative;
   box-shadow: 0 -1px 0 0 var(--border-default-grey);
-  margin-bottom: 2.5rem;
-  padding-top: 1rem;
 
-  .card-title {
+  .procedure__title {
+    margin-top: 2.5rem;
     width: 100%;
 
     @media (min-width: 62em) {
+      float: left;
+      margin: 0.25rem 0 1rem 6rem;
       width: auto;
     }
+  }
+
+  .card-title {
+    display: inline;
+  }
+
+  .fr-nav {
+    position: absolute;
+    top: 0.8125rem;
   }
 
   .fr-nav__btn {
@@ -58,6 +69,7 @@
 }
 
 .procedure-stats {
+  clear: left;
   padding-inline-start: 0;
 
   li {
